fixed word wrapping in thumbnails

--- a/less/dotsub.less
+++ b/less/dotsub.less
@@ -340,3 +340,7 @@ body {
 #enterpriseButton .btn-large:hover {
     color: @headingsColor;
 }
+
+.thumbnail .caption {
+    word-wrap: break-word;
+}
